# rusty-network

./: .gitignore  Cargo.toml  README.org
cache/: 0.9731_20231115204244.json
convolve_test/: Cargo.toml
src/: feed_forward.rs  main.rs  network.rs  read_image.rs
