[package]
name = "neural_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
image = "0.24.7"
nalgebra = "0.32.3"
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-npy = "0.8.1"
ndarray-rand = "0.14.0"
num-traits = "0.2.17"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
